<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_coms</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="103225424+garthable@users.noreply.github.com">default</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <test_depend>px4_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
